# OMI_system

./: CMakeLists.txt  README.md  addStu.c  dele_save.c  help.c  judge_date.c  main.c  menu.c  qusort.c  stu_add.c  stu_change.c  stu_clear.c  stu_delete.c  stu_delete_nam.c  stu_delete_num.c  stu_read.c  stu_save.c  stu_search.c  stu_search_nam.c  stu_search_num.c  stu_skim.c  stu_sort.c  student.h  swap.c  tail_find.c
